@@ -3,11 +3,11 @@ apply from: "dependencies.gradle"
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:8.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,12 +16,29 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        maven { url 'https://jitpack.io' }
         google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+subprojects {
+    tasks.withType(JavaCompile).configureEach { task ->
+        task.options.fork = true
+        task.options.forkOptions.jvmArgs += [
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+        ]
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+//plugins {
+//    alias(libs.plugins.android.application) apply false
+//    alias(libs.plugins.kotlin.compose) apply false
+//}
